--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,20 +1,10 @@
 # Authors
 
-billy_rick:
-  name: Billy Rick
-  web: http://thewhip.com
-  email: billy@rick.com
-  bio: "What do you want, jewels? I am a very extravagant man."
-  avatar: bio-photo-2.jpg
-  twitter: extravagantman
-  google:
-    plus: BillyRick
-
-cornelius_fiddlebone:
-  name: Cornelius Fiddlebone
-  email: cornelius@thewhip.com
-  bio: "I ordered what?"
-  avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
-  google:
-    plus: CorneliusFiddlebone
+freddyrangel:
+  name: Freddy Rangel
+  web: http://freddyrangel.github.io
+  email: frederick.rangel@gmail.com
+  bio: "Full Stack Web Developer. Data Science Enthusiast"
+  avatar: lb_marathon.jpg
+  twitter: frangel85
+  github: freddyrangel
