Fixed styling for mobile.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ freddyrangel:
   name: Freddy Rangel
   web: http://freddyrangel.github.io
   email: frederick.rangel@gmail.com
-  bio: "Full Stack Web Developer. Data Science Enthusiast"
+  bio: "Full Stack Web Developer. Data Science Enthusiast. Evil Genuis."
   avatar: lb_marathon.jpg
   twitter: frangel85
   github: freddyrangel
