--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Freddy's Blog
 locale:           en_US
-url:              
+url:
 
 
 # Jekyll configuration
@@ -29,18 +29,18 @@ kramdown:
 owner:
   name: Freddy Rangel
   avatar: lb_marathon.jpg
-  bio: "Full Stack Web Developer. Data Science Enthusiast."
+  bio: "Full Stack Web Developer. Data Science Enthusiast. Evil Genius."
   email: frederick.rangel@gmail.com
   disqus-shortname: frederickrangel
   twitter: frangel85
   facebook: #username
   google:
     plus: #username
-    analytics: 
-    verify: 
-    ad-client: 
-    ad-slot: 
-  bing-verify: 
+    analytics:
+    verify:
+    ad-client:
+    ad-slot:
+  bing-verify:
   github: freddyrangel
   stackoverflow: 2626615/freddyrangel
   linkedin: #username
