--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 # Site owner
 owner:
   name: Freddy Rangel
-  avatar: lb_marathon.jpg
+  avatar: evil_genius.jpg
   bio: "Software Developer. Data Science Nerd. Evil Genius."
   email: frederick.rangel@gmail.com
   disqus-shortname: frederickrangel
