--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,6 +5,6 @@ freddyrangel:
   web: http://freddyrangel.github.io
   email: frederick.rangel@gmail.com
   bio: "Full Stack Web Developer. Data Science Enthusiast. Evil Genuis."
-  avatar: lb_marathon.jpg
+  avatar: evil_genius.jpg
   twitter: frangel85
   github: freddyrangel
